<resources>
    <string name="app_name">La buena</string>
    <string name="lbl_manufacture">Manufacture</string>
    <string name="lb_metric_unit">kg</string>
    <string name="lbl_external_stock">External Stock</string>
    <string name="lbl_orders_to_deliver">Orders to deliver</string>
    <string name="amount_metric_unit">kg</string>

    <string name="hint_stock">Stock</string>
	<string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign in</string>
    <string name="email_address_required">Enter email address!</string>
    <string name="password_required">Enter password!</string>
	<string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register to get access.</string>
    <string name="service_not_available">The service is not available</string>
    <string name="no_address_found">We could not find an address with that last saved location</string>
    <string name="invalid_lat_long_used">Invalid latitude, longitude used.</string>
    <string name="tortillas_to_deliver_format">%d kg to deliver</string>
    <string name="map_snipped_format">%d kg</string>
    <string name="lbl_new_biker">New Biker</string>
    <string name="hint_name">Name</string>
    <string name="action_register">Register</string>
    <string name="user_name_required">Enter biker name</string>
    <string name="duplicate_biker">Email already register.</string>
    <string name="biker_added_notification_title">New biker added</string>
    <string name="biker_added_notification_content">" successfully registered"</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please click the reset password button to send a reset password email to %1$s for %2$s or click in update stock button to refresh the bikers current stock.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="reset_password_email_sent">An email has been sent to %s with the instructions to reset the password</string>
    <string name="error_resetting_password">Error trying to send reset password email</string>
    <string name="email_not_from_branch">Invalid branch email</string>
    <string name="amount_to_deliver">%d kg</string>
    <string name="biker_tab_location">Bikers Location</string>
    <string name="biker_tab_management">Bikers Management</string>
    <string name="user_phone_required">Enter phone number</string>
    <string name="hint_phone">Phone number</string>
    <string name="processing_biker_registration">Processing biker registration</string>
    <string name="btn_update_stock">Update stock</string>
    <string name="stock_required">Please add the driver stock</string>
    <string name="biker_stock_updated_notification_title">Biker updated</string>
    <string name="biker_stock_updated_content">Biker stock updated successfully</string>
    <string name="processing_biker_update">Processing biker update.</string>
    <string name="app_icon_description">La Buena icon image</string>
    <string name="invalid_phone_number">Enter a valid phone number</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="invalid_password">Enter a password length of 6 to 12 characters. Only letters and digits allowed</string>
</resources>
