<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="@drawable/widget_background"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/manufactureLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lbl_manufacture"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/manufactureLabelTextView"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/manufactureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="80dp" />

            <TextView
                android:id="@+id/metricUnitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_metric_unit" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/externalStockLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/lbl_external_stock"/>

        <TextView
            android:id="@+id/externalStockTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/ordersToDeliverLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/lbl_orders_to_deliver"/>

        <TextView
            android:id="@+id/ordersToDeliverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>